manifest/reposilite/reposilite-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: reposilite
  name: reposilite
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: reposilite
  strategy: {}
  template:
    metadata:
      labels:
        io.kompose.service: reposilite
    spec:
      containers:
        - env:
            - name: JAVA_OPTS
              value: -Xmx64M
            - name: REPOSILITE_OPTS
              value: --port 8080 --token admin:secret
          image: dzikoysk/reposilite:3.0.0-rc.4
          name: reposilite
          ports:
            - containerPort: 8080
          resources: {}
          stdin: true
          tty: true
      restartPolicy: Always
status: {}
