manifest/reposilite/reposilite-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: reposilite-ingress
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: reposilite
            port:
              number: 8090
