manifest/reposilite/reposilite-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: reposilite
  name: reposilite
spec:
  ports:
    - name: "8080"
      port: 8090
      targetPort: 8080
  selector:
    io.kompose.service: reposilite
status:
  loadBalancer: {}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: reposilite-ingress
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: reposilite
            port:
              number: 8090
