manifest/reposilite/reposilite.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: reposilite
  name: reposilite
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: reposilite
  name: reposilite
  namespace: reposilite
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: reposilite
  strategy: {}
  template:
    metadata:
      labels:
        io.kompose.service: reposilite
    spec:
      containers:
        - env:
            - name: JAVA_OPTS
              value: -Xmx64M
            - name: REPOSILITE_OPTS
              value: --port 8080 --token admin:secret
          image: dzikoysk/reposilite:3.0.0-rc.4
          name: reposilite
          ports:
            - containerPort: 8080
          resources: {}
          stdin: true
          tty: true
      restartPolicy: Always
status: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: reposilite
  name: reposilite
  namespace: reposilite
spec:
  ports:
    - name: "8080"
      port: 8090
      targetPort: 8080
  selector:
    io.kompose.service: reposilite
status:
  loadBalancer: {}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: reposilite-ingress
  namespace: reposilite
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: reposilite
            port:
              number: 8090
